--- a/.github/workflows/dotnet-avalonia-build.yml
+++ b/.github/workflows/dotnet-avalonia-build.yml
@@ -77,6 +77,7 @@ jobs:
       - name: Create GitHub Release
         uses: phuonghuynh/action-ghrelease@v1.1.0
         with:
+          tag_name: ${{ github.run_number }}
           files: |
             publish/linux-x64/*
             publish/win-x64/*
