--- a/.github/workflows/dotnet-avalonia-build.yml
+++ b/.github/workflows/dotnet-avalonia-build.yml
@@ -2,12 +2,8 @@ name: Build and Package Avalonia App
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch:
+    tags:
+      - '*'
 
 jobs:
   build:
@@ -77,7 +73,7 @@ jobs:
       - name: Create GitHub Release
         uses: phuonghuynh/action-ghrelease@v1.1.0
         with:
-          tag_name: ${{ github.run_number }}
+          tag_name: ${{ github.ref }}
           files: |
             publish/linux-x64/*
             publish/win-x64/*
