--- a/.github/workflows/dotnet-avalonia-build.yml
+++ b/.github/workflows/dotnet-avalonia-build.yml
@@ -2,8 +2,8 @@ name: Build and Package Avalonia App
 
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - main
 
 jobs:
   build:
@@ -69,11 +69,19 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: Telegrafer-macos-latest
+          
+      - name: add-tag
+        # You may pin to the exact commit or the version.
+        # uses: IIlyichev/github-tag-action@8b40ce208f6d7f902a3ee8c761f76db20fd87475
+        uses: mathieudutour/github-tag-action@v6.2
+        with:
+          # Required for permission to tag the repo.
+          github_token: "${{ secrets.GITHUB_TOKEN }}"
 
       - name: Create GitHub Release
         uses: phuonghuynh/action-ghrelease@v1.1.0
         with:
-          tag_name: ${{ github.ref }}
+          tag_name: ${{ steps.add-tag.outputs.new_tag }}
           files: |
             publish/linux-x64/*
             publish/win-x64/*
