--- a/.github/workflows/dotnet-avalonia-build.yml
+++ b/.github/workflows/dotnet-avalonia-build.yml
@@ -50,12 +50,25 @@ jobs:
           name: Telegrafer-${{ matrix.os }}
           path: ./publish
 
+  tag:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: add-tag
+        # You may pin to the exact commit or the version.
+        # uses: IIlyichev/github-tag-action@8b40ce208f6d7f902a3ee8c761f76db20fd87475
+        uses: mathieudutour/github-tag-action@v6.2
+        with:
+          # Required for permission to tag the repo.
+          github_token: "${{ secrets.GITHUB_TOKEN }}"
+    outputs:
+      new_tag: ${{ steps.add-tag.outputs.new_tag }}
+
   # Optional: Create a release with the build artifacts
   release:
     runs-on: ubuntu-latest
-    needs: build
+    needs: tag
     if: github.ref == 'refs/heads/main'
-
     steps:
       - name: Download build artifacts
         uses: actions/download-artifact@v3
@@ -69,19 +82,14 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: Telegrafer-macos-latest
-          
-      - name: add-tag
-        # You may pin to the exact commit or the version.
-        # uses: IIlyichev/github-tag-action@8b40ce208f6d7f902a3ee8c761f76db20fd87475
-        uses: mathieudutour/github-tag-action@v6.2
-        with:
-          # Required for permission to tag the repo.
-          github_token: "${{ secrets.GITHUB_TOKEN }}"
+
+      - name: test
+        run: echo ${{ needs.tag.outputs.new_tag }}
 
       - name: Create GitHub Release
         uses: phuonghuynh/action-ghrelease@v1.1.0
         with:
-          tag_name: ${{ steps.add-tag.outputs.new_tag }}
+          tag_name: ${{ needs.tag.outputs.new_tag }}
           files: |
             publish/linux-x64/*
             publish/win-x64/*
