--- a/.github/workflows/dotnet-avalonia-build.yml
+++ b/.github/workflows/dotnet-avalonia-build.yml
@@ -55,8 +55,6 @@ jobs:
     needs: build
     steps:
       - name: add-tag
-        # You may pin to the exact commit or the version.
-        # uses: IIlyichev/github-tag-action@8b40ce208f6d7f902a3ee8c761f76db20fd87475
         uses: mathieudutour/github-tag-action@v6.2
         with:
           # Required for permission to tag the repo.
@@ -86,13 +84,22 @@ jobs:
       - name: test
         run: echo ${{ needs.tag.outputs.new_tag }}
 
-      - name: Create GitHub Release
-        uses: phuonghuynh/action-ghrelease@v1.1.0
+      
+      - name: 🛎️ Create release
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: ${{ needs.tag.outputs.new_tag }}
-          files: |
-            publish/linux-x64/*
-            publish/win-x64/*
-            publish/osx-x64/*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ needs.tag_version.outputs.tag }}
+          draft: true
+          artifacts: publish/**
+
+      # - name: Create GitHub Release
+      #   uses: phuonghuynh/action-ghrelease@v1.1.0
+      #   with:
+      #     tag_name: ${{ needs.tag.outputs.new_tag }}
+      #     files: |
+      #       publish/linux-x64/*
+      #       publish/win-x64/*
+      #       publish/osx-x64/*
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
