--- a/.github/workflows/dotnet-avalonia-build.yml
+++ b/.github/workflows/dotnet-avalonia-build.yml
@@ -53,14 +53,15 @@ jobs:
   tag:
     runs-on: ubuntu-latest
     needs: build
+    outputs:
+      new_tag: ${{ steps.add_tag.outputs.new_tag }}
     steps:
       - name: add_tag
+        id: add_tag
         uses: mathieudutour/github-tag-action@v6.2
         with:
           # Required for permission to tag the repo.
           github_token: "${{ secrets.GITHUB_TOKEN }}"
-    outputs:
-      new_tag: ${{ steps.add_tag.outputs.new_tag }}
 
   # Optional: Create a release with the build artifacts
   release:
