--- a/.github/workflows/dotnet-avalonia-build.yml
+++ b/.github/workflows/dotnet-avalonia-build.yml
@@ -85,7 +85,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ needs.tag.outputs.new_tag }}
           draft: true
-          artifacts: **
+          artifacts: "**"
 
       # - name: Create GitHub Release
       #   uses: phuonghuynh/action-ghrelease@v1.1.0
