--- a/.github/workflows/dotnet-avalonia-build.yml
+++ b/.github/workflows/dotnet-avalonia-build.yml
@@ -73,11 +73,7 @@ jobs:
         uses: actions/download-artifact@v4
 
       - name: test
-        run: ls -la
-
-      - name: test2
-        run: pwd
-
+        run: du -a
       
       - name: 🛎️ Create release
         uses: ncipollo/release-action@v1
