--- a/.github/workflows/dotnet-avalonia-build.yml
+++ b/.github/workflows/dotnet-avalonia-build.yml
@@ -54,6 +54,7 @@ jobs:
   tag:
     runs-on: ubuntu-latest
     needs: build
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release'
     outputs:
       new_tag: ${{ steps.add_tag.outputs.new_tag }}
     steps:
@@ -71,7 +72,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: tag
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release'
     steps:
       - name: Download build artifacts
         uses: actions/download-artifact@v4
@@ -91,4 +92,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ needs.tag.outputs.new_tag }}
           artifacts: "uploads/**"
-          prerelease: ${{ github.ref == 'refs/heads/release' && 'false' || 'true' }}
+          prerelease: ${{ github.ref == 'refs/heads/release' && false || true }}
